--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cutalab2
 spring.datasource.username=luca
 spring.datasource.password=trustno1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql: true
+#spring.jpa.properties.hibernate.format_sql=true
 
 vaadin.whitelisted-packages=com.cutalab.cutalab2,com.vaadin.org.vaadin
 
