--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cutalab2
+#spring.datasource.url=jdbc:mysql://192.168.1.33:3306/cutalab2
 spring.datasource.username=luca
 spring.datasource.password=trustno1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 #spring.jpa.properties.hibernate.format_sql=true
+
+#server.port=443
+#server.ssl.key-store=/etc/letsencrypt/live/www.thegeeklab.it/keystore.p12
+#server.ssl.key-store-password=trustno1
+#server.ssl.keyStoreType=PKCS12
 
 vaadin.whitelisted-packages=com.cutalab.cutalab2,com.vaadin.org.vaadin
 
