Introdotto redirect per la porta 443

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.format_sql=true
 
 #server.port=443
+#server.port.http=80
 #server.ssl.key-store=/etc/letsencrypt/live/www.thegeeklab.it/keystore.p12
 #server.ssl.key-store-password=trustno1
 #server.ssl.keyStoreType=PKCS12
